part2/2-08-project-v1.2/manifests/database-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-ss
  namespace: dowk-22-todo
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgresapp
  template:
    metadata:
      labels:
        app: postgresapp
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - name: web
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
