part2/2-08-project-v1.2/manifests/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-svc
  namespace: dowk-22-todo
spec:
  clusterIP: None
  selector:
    app: postgresapp
  ports:
    - port: 5432
      name: web
