part2/2-08-project-v1.2/manifests/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-server-svc
  namespace: dowk-22-todo
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - name: client
      port: 2600
      protocol: TCP
      targetPort: 8080
